more work and stuff

--- a/sass/includes/selectBox.scss
+++ b/sass/includes/selectBox.scss
@@ -114,7 +114,7 @@ body{
             padding: 0 48px 0 24px;
             position: relative;
             overflow: hidden;
-            font-family:roboto;
+            font-family:lato;
             text-align:center;
             
             &:before {
