push location work

--- a/sass/includes/mdCard.scss
+++ b/sass/includes/mdCard.scss
@@ -15,7 +15,7 @@
     height: 56px;
     width: 100%;
     border-radius: 2px 2px 0 0;
-    background-color: #F5F5F5;
+    /* background-color: #F5F5F5; */
     padding: 16px 24px 16px 24px;
 
     .rtvmd-header-text {
@@ -74,9 +74,9 @@
 /****************************
   Pete's new ideas styling
 *****************************/
-/*.rtvmd-card-header {
+/* .rtvmd-card-header {
   background-color: #FFF !important;
-}
+} */
 
 .rtvmd-hr {
   width:95% !important;
@@ -84,7 +84,8 @@
   margin-right: auto;
 }
 
-.rtvmd-card {
+/* .rtvmd-card {
   box-shadow: none;
   border: 1px solid rgba(0,0,0,0.12) !important;
-}*/
+}
+ */
