--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@
   position: relative;
   text-align: center;
   margin-bottom: 10px; }
-  .materialSingleSelect.error .select:not(.isOpen) {
+  .materialSingleSelect.error .mdSingleSelect:not(.isOpen) {
     border: 1px solid #DD2C00 !important; }
   .materialSingleSelect.error .message {
     display: block; }
@@ -247,23 +247,23 @@
     display: inline-block;
     z-index: 0;
     min-width: 100px; }
-    .materialSingleSelect.inline .select {
+    .materialSingleSelect.inline .mdSingleSelect {
       transform: translate(0, 0);
       top: 0;
       left: 0;
       margin: 0;
-      transition: all 0.2s !important;
+      transition: all 0.1s !important;
       width: 100%; }
-      .materialSingleSelect.inline .select.isOpen {
+      .materialSingleSelect.inline .mdSingleSelect.isOpen {
         transform: translate(0, -50%);
         top: 50%; }
   .materialSingleSelect:not(.inline) {
     width: 100%; }
-    .materialSingleSelect:not(.inline) .select {
+    .materialSingleSelect:not(.inline) .mdSingleSelect {
       width: 100%;
       margin-left: 50%;
       transform: translate(-50%, 0); }
-  .materialSingleSelect .select {
+  .materialSingleSelect .mdSingleSelect {
     position: absolute;
     margin: 0;
     padding: 0;
@@ -280,7 +280,7 @@
     background-color: #fff;
     margin-left: 0;
     transform: none; }
-    .materialSingleSelect .select:after {
+    .materialSingleSelect .mdSingleSelect:after {
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-top: 5px solid #bbbbbb;
@@ -292,7 +292,7 @@
       top: 19px;
       right: 10px;
       width: 0px; }
-    .materialSingleSelect .select li {
+    .materialSingleSelect .mdSingleSelect li {
       cursor: pointer;
       font-size: 15px;
       list-style: none;
@@ -300,12 +300,12 @@
       padding: 0 48px 0 24px;
       position: relative;
       overflow: hidden; }
-      .materialSingleSelect .select li[data-selected] {
+      .materialSingleSelect .mdSingleSelect li[data-selected] {
         height: 48px; }
-      .materialSingleSelect .select li:not([data-selected]) {
+      .materialSingleSelect .mdSingleSelect li:not([data-selected]) {
         height: 0px;
         opacity: 0; }
-    .materialSingleSelect .select.isOpen {
+    .materialSingleSelect .mdSingleSelect.isOpen {
       background-color: #fafafa;
       border-radius: 2px;
       box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.3);
@@ -313,26 +313,24 @@
       top: -96px;
       height: 250px;
       z-index: 99999; }
-      .materialSingleSelect .select.isOpen:after {
+      .materialSingleSelect .mdSingleSelect.isOpen:after {
         display: none; }
-      .materialSingleSelect .select.isOpen:before {
+      .materialSingleSelect .mdSingleSelect.isOpen:before {
         border-color: transparent !important; }
-      .materialSingleSelect .select.isOpen li {
+      .materialSingleSelect .mdSingleSelect.isOpen li {
         height: 48px;
         opacity: 1; }
-        .materialSingleSelect .select.isOpen li[data-selected] {
-          color: #1EC9E9; }
-        .materialSingleSelect .select.isOpen li:hover {
+        .materialSingleSelect .mdSingleSelect.isOpen li:hover {
           background-color: #eeeeee; }
-        .materialSingleSelect .select.isOpen li:active {
+        .materialSingleSelect .mdSingleSelect.isOpen li:active {
           background-color: #dbdbdb; }
-    .materialSingleSelect .select:not(.isOpen):hover {
+    .materialSingleSelect .mdSingleSelect:not(.isOpen):hover {
       background-color: #f7f7f7;
-      border-top: 1px solid #CDCDCD;
-      border-bottom: 1px solid #CDCDCD; }
-    .materialSingleSelect .select:not(.isOpen):active {
+      /* border-top: 1px solid #CDCDCD; */
+      /* border-bottom: 1px solid #CDCDCD; */ }
+    .materialSingleSelect .mdSingleSelect:not(.isOpen):active {
       box-shadow: 1px 2px 1px 0 rgba(0, 0, 0, 0.3); }
-    .materialSingleSelect .select + .select:before {
+    .materialSingleSelect .mdSingleSelect + .mdSingleSelect:before {
       border-left: thin solid #c8c8c8;
       content: '';
       height: 32px;
@@ -347,9 +345,9 @@
     display: none; }
 
 @media only screen and (min-width: 1008px) {
-  .materialSelect .select {
+  .materialSingleSelect .mdSingleSelect {
     transition: background 0.2s ease,  border 0.2s ease,  top 0.2s ease,  height 0.2s ease,    box-shadow 0.2s ease; }
-    .materialSelect .select li {
+    .materialSingleSelect .mdSingleSelect li {
       transition: height 0.2s linear,  opacity 0.2s ease,  margin 0.2s linear; } }
 body {
   min-width: calc(100vw - 20px);
